[gd_scene load_steps=6 format=3 uid="uid://bit2j3alrk2xn"]

[ext_resource type="Texture2D" uid="uid://drgncq83l8a42" path="res://Sprites/Sprout Lands - UI Pack - Basic pack/Sprite sheets/base_ui.png" id="1_2jgyi"]
[ext_resource type="Script" uid="uid://eucbsh1h5nvi" path="res://Scripts/Level/pause_event.gd" id="1_ny10a"]
[ext_resource type="Script" uid="uid://c6unde668ykyy" path="res://Scripts/Animation/SoundFX/UI_soundfx.gd" id="2_ny10a"]
[ext_resource type="Theme" uid="uid://y4k66rhnuxjf" path="res://Themes/button_in_game.tres" id="3_kxdtd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5umqs"]
texture = ExtResource("1_2jgyi")
region_rect = Rect2(11.0638, 11.9704, 105.934, 122.056)

[node name="PauseUI_LevelSelection" type="Control" node_paths=PackedStringArray("audio")]
process_mode = 2
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ny10a")
audio = NodePath("AudioStreamPlayer2D")

[node name="TextureRect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -188.0
offset_right = -171.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10.3246, 6.08435)
theme_override_styles/panel = SubResource("StyleBoxTexture_5umqs")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -95.0
offset_right = 70.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.35375, 1.36553)
pivot_offset = Vector2(19.5823, 12.9359)
theme_override_font_sizes/font_size = 32
text = "PAUSE	"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("2_ny10a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 304.0
offset_right = 655.0
offset_bottom = 432.0
theme_override_constants/separation = 12

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kxdtd")
text = "Continue"

[node name="Setting" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kxdtd")
text = "Settings"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kxdtd")
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
